добавила фавикон и подключила bootstrap

--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World.craft</title>
     <link rel="stylesheet" href="style.css">
+    <link type="image/x-icon" sizes="16x16" rel="icon" href="/pics/favicon.ico">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 
 <body>
     <header class="container">
-        // img src="" alt="logo">
+        <img src="/pics/logo.svg" alt="logo">
         <nav>
             <a href="">Главная</a>
             <a href="">О нас</a>
@@ -27,7 +29,7 @@
                 <h1>Создавай игровые города, в которые хочется погружаться</h1>
                 <p>От заброшенных кварталов до футуристических мегаполисов — научись проектировать атмосферные города
                     для видеоигр, создавая уникальные пространства с логикой, историей и глубиной.</p>
-                <button>Хочу на курс!</button>
+                <button class="btn btn-info">Хочу на курс!</button>
             </div>
         </section>
     </main>
