добавила блоки о нас и начала делать тарифы

--- a/index.html
+++ b/index.html
@@ -34,6 +34,50 @@
                 <button class="btn btn-info">Хочу на курс!</button>
             </div>
         </section>
+        <section id="about-us">
+            <div class="container about-us-content">
+                <img src="/pics/aboutus.png" alt="о нас">
+                <div class="about-us-text">
+                    <h2>О нас</h2>
+                    <p>Города в видеоиграх — это не просто фон, а часть истории. Они задают атмосферу, влияют на
+                        геймплей и
+                        делают мир живым. Мрачный мегаполис, руины постапокалипсиса или киберпанковый лабиринт улиц —
+                        каждый
+                        город должен ощущаться реальным.</p>
+                    <p>World.craft — курсы по созданию урбанистики для видеоигр. Мы изучим архитектуру, логику
+                        распределения
+                        пространств и способы передачи истории через окружение. Разберём знаковые игровые города вроде
+                        Night
+                        City (Cyberpunk 2077), Dunwall (Dishonored) и Silent Hill, а затем применим знания на практике.
+                    </p>
+                    <p>Курс подойдёт тем, кто увлекается урбанистикой и мечтает создавать игровые миры. Научись
+                        создавать
+                        города, которые будут запоминаться!</p>
+                </div>
+            </div>
+        </section>
+        <section id="catalog" class="container">
+            <div class="block-description">
+                <h2>Тарифы</h2>
+                <p>Мы предоставляем наш курс в трех различных форматах, в зависимости от ваших запросов </p>
+            </div>
+
+            <div class="cards">
+                <div class="card">
+                    <img src="/pics/card1.png" alt="">
+                    <div class="card_description">
+                        <div class="card_headline">
+                            <h3>"Тарифффчик"</h3>
+                            <p>500р</p>
+                        </div> 
+                        <p>Основы урбанистики в играх:</p>
+                        <p>архитектура, атмосфера, влияние</p>
+                        <p>на геймплей. Практика — </p>
+                        <p>создание небольшой сцены.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
