докидала карточки и сделала форму обратной связи

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                     <img src="/pics/card1.png" alt="">
                     <div class="card_description">
                         <div class="card_headline">
-                            <h3>"Тарифффчик"</h3>
-                            <p>500р</p>
+                            <h3>“Родной двор”</h3>
+                            <p>4 900р</p>
                         </div> 
                         <p>Основы урбанистики в играх:</p>
                         <p>архитектура, атмосфера, влияние</p>
@@ -76,7 +76,44 @@
                         <p>создание небольшой сцены.</p>
                     </div>
                 </div>
+                <div class="card">
+                    <img src="/pics/card2.png" alt="">
+                    <div class="card_description">
+                        <div class="card_headline">
+                            <h3>“Любимый район”</h3>
+                            <p>9 900р</p>
+                        </div> 
+                        <p>Глубокий разбор игровых городов</p>
+                        <p>(GTA, Cyberpunk 2077, </p>
+                        <p>Dishonored). Создание районов, </p>
+                        <p>работа с вертикальностью.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="/pics/card3.png" alt="">
+                    <div class="card_description">
+                        <div class="card_headline">
+                            <h3>“Городская среда”</h3>
+                            <p>16 900р</p>
+                        </div> 
+                        <p>Полный курс с обратной связью. </p>
+                        <p>Проработка стилистики (нуар, </p>
+                        <p>стимпанк и др.), реализация </p>
+                        <p>финального проекта игрового </p>
+                        <p>города.</p>
+                    </div>
+                </div>
             </div>
+        </section>
+        <section id="form">
+            <h2>Хочешь создавать запомниющиеся города?<br>
+                Запишись на курс!<br>
+                Сделай первый шаг в геймдизайне!</h2>
+                <form action="">
+                    <input type="text" placeholder="Иванов Иван" name="" id="">
+                    <input type="mail" placeholder="Example@mail.ru" name="" id="">
+                    <input type="submit" value="Записаться!">
+                </form>
         </section>
     </main>
 </body>
