Рехтую то, что есть

--- a/index.html
+++ b/index.html
@@ -14,20 +14,21 @@
 </head>
 
 <body>
-    <header class="container">
-        <img src="/pics/logo.svg" alt="logo">
-        <nav>
-            <a href="">Главная</a>
-            <a href="">О нас</a>
-            <a href="">Тарифы</a>
-            <a href="">Обратная связь</a>
-            <a href="">Блог</a>
-            <a href="">Контакты</a>
-        </nav>
-    </header>
+    
     <main>
         <section id="cover">
-            <div class="cover-content container">
+            <header class="container">
+                <img src="/pics/logo.svg" alt="logo">
+                <nav>
+                    <a href="">Главная</a>
+                    <a href="">О нас</a>
+                    <a href="">Тарифы</a>
+                    <a href="">Обратная связь</a>
+                    <a href="">Блог</a>
+                    <a href="">Контакты</a>
+                </nav>
+            </header>
+            <div class="container cover-content ">
                 <h1>Создавай игровые города, в которые хочется погружаться</h1>
                 <p>От заброшенных кварталов до футуристических мегаполисов — научись проектировать атмосферные города
                     для видеоигр, создавая уникальные пространства с логикой, историей и глубиной.</p>
@@ -35,7 +36,7 @@
             </div>
         </section>
         <section id="about-us">
-            <div class="container about-us-content">
+            <div class="about-us-content container">
                 <img src="/pics/aboutus.png" alt="о нас">
                 <div class="about-us-text">
                     <h2>О нас</h2>
@@ -69,7 +70,7 @@
                         <div class="card_headline">
                             <h3>“Родной двор”</h3>
                             <p>4 900р</p>
-                        </div> 
+                        </div>
                         <p>Основы урбанистики в играх:</p>
                         <p>архитектура, атмосфера, влияние</p>
                         <p>на геймплей. Практика — </p>
@@ -82,7 +83,7 @@
                         <div class="card_headline">
                             <h3>“Любимый район”</h3>
                             <p>9 900р</p>
-                        </div> 
+                        </div>
                         <p>Глубокий разбор игровых городов</p>
                         <p>(GTA, Cyberpunk 2077, </p>
                         <p>Dishonored). Создание районов, </p>
@@ -95,7 +96,7 @@
                         <div class="card_headline">
                             <h3>“Городская среда”</h3>
                             <p>16 900р</p>
-                        </div> 
+                        </div>
                         <p>Полный курс с обратной связью. </p>
                         <p>Проработка стилистики (нуар, </p>
                         <p>стимпанк и др.), реализация </p>
@@ -109,11 +110,11 @@
             <h2>Хочешь создавать запомниющиеся города?<br>
                 Запишись на курс!<br>
                 Сделай первый шаг в геймдизайне!</h2>
-                <form action="">
-                    <input type="text" placeholder="Иванов Иван" name="" id="">
-                    <input type="mail" placeholder="Example@mail.ru" name="" id="">
-                    <input type="submit" value="Записаться!">
-                </form>
+            <form action="">
+                <input type="text" placeholder="Иванов Иван" name="" id="">
+                <input type="mail" placeholder="Example@mail.ru" name="" id="">
+                <input type="submit" value="Записаться!">
+            </form>
         </section>
     </main>
 </body>
