добавила блог, вторую форму обратной связи и подвал

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    
+
     <main>
         <section id="cover">
             <header class="container">
@@ -62,7 +62,6 @@
                 <h2>Тарифы</h2>
                 <p>Мы предоставляем наш курс в трех различных форматах, в зависимости от ваших запросов </p>
             </div>
-
             <div class="cards">
                 <div class="card">
                     <img src="/pics/card1.png" alt="">
@@ -75,6 +74,7 @@
                         <p>архитектура, атмосфера, влияние</p>
                         <p>на геймплей. Практика — </p>
                         <p>создание небольшой сцены.</p>
+                        <button>Мне подходит!</button>
                     </div>
                 </div>
                 <div class="card">
@@ -88,6 +88,7 @@
                         <p>(GTA, Cyberpunk 2077, </p>
                         <p>Dishonored). Создание районов, </p>
                         <p>работа с вертикальностью.</p>
+                        <button>Мне подходит!</button>
                     </div>
                 </div>
                 <div class="card">
@@ -102,6 +103,7 @@
                         <p>стимпанк и др.), реализация </p>
                         <p>финального проекта игрового </p>
                         <p>города.</p>
+                        <button>Мне подходит!</button>
                     </div>
                 </div>
             </div>
@@ -116,6 +118,62 @@
                 <input type="submit" value="Записаться!">
             </form>
         </section>
+        <section class="container" id="blog">
+            <div class="block-description">
+                <h2>Блог</h2>
+                <p>Следите за трендами в игровой урбанистике! Узнайте, как создаются<br>культовые игровые города, и
+                    вдохновляйтесь свежими идеями.</p>
+            </div>
+            <div class="cards">
+                <div class="card">
+                    <img src="/pics/blog1.png" alt="">
+                    <div class="card_description">
+                        <h5>Самые культовые города из комиксов</h5>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="/pics/blog2.png" alt="">
+                    <div class="card_description">
+                        <h5>Реальные места и их версии в играх</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="cards">
+                <div class="card">
+                    <img src="/pics/blog3.png" alt="">
+                    <div class="card_description">
+                        <h5>Почему мертвые места притягивают нас?</h5>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="/pics/blog4.png" alt="">
+                    <div class="card_description">
+                        <h5>Как увлечь игрока в “Симуляторе курьера”?<br>Эксклюзивное интервью с Хидео Кодзимой</h5>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="form2">
+            <h2>Освой навыки создания городов для видеоигр<br>
+                и воплоти свои идеи в реальность!<br>
+                Оставь заявку прямо сейчас!</h2>
+            <form action="">
+                <input type="text" placeholder="Иванов Иван" name="" id="">
+                <input type="mail" placeholder="Example@mail.ru" name="" id="">
+                <input type="submit" value="Записаться!">
+            </form>
+        </section>
+        <footer class="container">
+            <img src="/pics/footerlogo.svg" alt="logo">
+            <div class="contacts">
+                <nav>
+                    <a href="">info@cityascharacter.com</a>
+                    <a href="">+7-XXX-XXX-XX-XX</a>
+                    <a href="">Пользовательское соглашение</a>
+                    <a href="">Политика обработки персональных данных</a>
+                </nav>
+            </div>
+        </footer>
     </main>
 </body>
 
