довела до ума футер, заголовки и текст

--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
                 </nav>
             </header>
             <div class="container cover-content ">
-                <h1>Создавай игровые города, в которые хочется погружаться</h1>
-                <p>От заброшенных кварталов до футуристических мегаполисов — научись проектировать атмосферные города
-                    для видеоигр, создавая уникальные пространства с логикой, историей и глубиной.</p>
+                <h1>Создавай игровые города,<br>в которые хочется погружаться</h1>
+                <p>От заброшенных кварталов до футуристических<br>мегаполисов — научись проектировать
+                    атмосферные<br>города
+                    для видеоигр, создавая уникальные<br>пространства с логикой, историей и глубиной.</p>
                 <button class="btn btn-info">Хочу на курс!</button>
             </div>
         </section>
@@ -39,7 +40,7 @@
             <div class="about-us-content container">
                 <img src="/pics/aboutus.png" alt="о нас">
                 <div class="about-us-text">
-                    <h2>О нас</h2>
+                    <h2 class="subtitle">О нас</h2>
                     <p>Города в видеоиграх — это не просто фон, а часть истории. Они задают атмосферу, влияют на
                         геймплей и
                         делают мир живым. Мрачный мегаполис, руины постапокалипсиса или киберпанковый лабиринт улиц —
@@ -59,8 +60,8 @@
         </section>
         <section id="catalog" class="container">
             <div class="block-description">
-                <h2>Тарифы</h2>
-                <p>Мы предоставляем наш курс в трех различных форматах, в зависимости от ваших запросов </p>
+                <h2 class="subtitle">Тарифы</h2>
+                <p class="main_text">Мы предоставляем наш курс в трех различных форматах, в зависимости от ваших запросов </p>
             </div>
             <div class="cards">
                 <div class="card">
@@ -68,12 +69,14 @@
                     <div class="card_description">
                         <div class="card_headline">
                             <h3>“Родной двор”</h3>
-                            <p>4 900р</p>
+                            <p class="price">4 900р</p>
                         </div>
-                        <p>Основы урбанистики в играх:</p>
-                        <p>архитектура, атмосфера, влияние</p>
-                        <p>на геймплей. Практика — </p>
-                        <p>создание небольшой сцены.</p>
+                        <div class="main_text">
+                            <p>Основы урбанистики в играх:</p>
+                            <p>архитектура, атмосфера, влияние</p>
+                            <p>на геймплей. Практика — </p>
+                            <p>создание небольшой сцены.</p>
+                        </div>
                         <button>Мне подходит!</button>
                     </div>
                 </div>
@@ -82,12 +85,14 @@
                     <div class="card_description">
                         <div class="card_headline">
                             <h3>“Любимый район”</h3>
-                            <p>9 900р</p>
+                            <p class="price">9 900р</p>
                         </div>
-                        <p>Глубокий разбор игровых городов</p>
-                        <p>(GTA, Cyberpunk 2077, </p>
-                        <p>Dishonored). Создание районов, </p>
-                        <p>работа с вертикальностью.</p>
+                        <div class="main_text">
+                            <p>Глубокий разбор игровых городов</p>
+                            <p>(GTA, Cyberpunk 2077, </p>
+                            <p>Dishonored). Создание районов, </p>
+                            <p>работа с вертикальностью.</p>
+                        </div>
                         <button>Мне подходит!</button>
                     </div>
                 </div>
@@ -96,13 +101,15 @@
                     <div class="card_description">
                         <div class="card_headline">
                             <h3>“Городская среда”</h3>
-                            <p>16 900р</p>
+                            <p class="price">16 900р</p>
                         </div>
-                        <p>Полный курс с обратной связью. </p>
-                        <p>Проработка стилистики (нуар, </p>
-                        <p>стимпанк и др.), реализация </p>
-                        <p>финального проекта игрового </p>
-                        <p>города.</p>
+                        <div class="main_text">
+                            <p>Полный курс с обратной связью. </p>
+                            <p>Проработка стилистики (нуар, </p>
+                            <p>стимпанк и др.), реализация </p>
+                            <p>финального проекта игрового </p>
+                            <p>города.</p>
+                        </div>
                         <button>Мне подходит!</button>
                     </div>
                 </div>
@@ -120,60 +127,71 @@
         </section>
         <section class="container" id="blog">
             <div class="block-description">
-                <h2>Блог</h2>
-                <p>Следите за трендами в игровой урбанистике! Узнайте, как создаются<br>культовые игровые города, и
+                <h2 class="subtitle">Блог</h2>
+                <p class="main_text">Следите за трендами в игровой урбанистике! Узнайте, как создаются<br>культовые игровые города, и
                     вдохновляйтесь свежими идеями.</p>
             </div>
-            <div class="cards">
-                <div class="card">
-                    <img src="/pics/blog1.png" alt="">
-                    <div class="card_description">
-                        <h5>Самые культовые города из комиксов</h5>
+                <div class="cards">
+                    <div class="card">
+                        <img src="/pics/blog1.png" alt="">
+                        <div class="card_description">
+                            <h5>Самые культовые города из комиксов</h5>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="/pics/blog2.png" alt="">
+                        <div class="card_description">
+                            <h5>Реальные места и их версии в играх</h5>
+                        </div>
                     </div>
                 </div>
-                <div class="card">
-                    <img src="/pics/blog2.png" alt="">
-                    <div class="card_description">
-                        <h5>Реальные места и их версии в играх</h5>
+                <div class="cards">
+                    <div class="card">
+                        <img src="/pics/blog3.png" alt="">
+                        <div class="card_description">
+                            <h5>Почему мертвые места притягивают нас?</h5>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="/pics/blog4.png" alt="">
+                        <div class="card_description">
+                            <h5>Как увлечь игрока в “Симуляторе курьера”?<br>Эксклюзивное интервью с Хидео Кодзимой</h5>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="cards">
-                <div class="card">
-                    <img src="/pics/blog3.png" alt="">
-                    <div class="card_description">
-                        <h5>Почему мертвые места притягивают нас?</h5>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="/pics/blog4.png" alt="">
-                    <div class="card_description">
-                        <h5>Как увлечь игрока в “Симуляторе курьера”?<br>Эксклюзивное интервью с Хидео Кодзимой</h5>
-                    </div>
-                </div>
-            </div>
         </section>
         <section id="form2">
             <h2>Освой навыки создания городов для видеоигр<br>
                 и воплоти свои идеи в реальность!<br>
                 Оставь заявку прямо сейчас!</h2>
-            <form action="">
+            <form action="" id="forma">
                 <input type="text" placeholder="Иванов Иван" name="" id="">
                 <input type="mail" placeholder="Example@mail.ru" name="" id="">
                 <input type="submit" value="Записаться!">
             </form>
         </section>
-        <footer class="container">
-            <img src="/pics/footerlogo.svg" alt="logo">
-            <div class="contacts">
-                <nav>
-                    <a href="">info@cityascharacter.com</a>
-                    <a href="">+7-XXX-XXX-XX-XX</a>
-                    <a href="">Пользовательское соглашение</a>
-                    <a href="">Политика обработки персональных данных</a>
-                </nav>
+        <section id="footer">
+            <div class="container">
+                <div class="footer">
+                    <div class="footer_left">
+                        <img src="/pics/footerlogo.svg" alt="logo" class="footer_logo">
+                        <div class="copyrights">
+                            © 2025 World.craft online school <br>
+                            ИП Зубенко Михаил Петрович<br>
+                        </div>
+                    </div>
+                    <div class="footer_right">
+                        <ul class="footer_menu">
+                            <li><a href="">info@cityascharacter.com</a></li>
+                            <li><a href="">+7-XXX-XXX-XX-XX</a></li>
+                            <li><a href="">Пользовательское соглашение</a></li>
+                            <li><a href="">Политика обработки персональных данных</a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-        </footer>
+            </div>
+        </section>
     </main>
 </body>
 
