сделала ссылки на изображения относительными

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main>
         <section id="cover">
             <header class="container">
-                <img src="/pics/logo.svg" alt="logo">
+                <img src="pics/logo.svg" alt="logo">
                 <nav>
                     <a href="">Главная</a>
                     <a href="">О нас</a>
@@ -38,7 +38,7 @@
         </section>
         <section id="about-us">
             <div class="about-us-content container">
-                <img src="/pics/aboutus.png" alt="о нас">
+                <img src="pics/aboutus.png" alt="о нас">
                 <div class="about-us-text">
                     <h2 class="subtitle">О нас</h2>
                     <p>Города в видеоиграх — это не просто фон, а часть истории. Они задают атмосферу, влияют на
@@ -65,7 +65,7 @@
             </div>
             <div class="cards">
                 <div class="card">
-                    <img src="/pics/card1.png" alt="">
+                    <img src="pics/card1.png" alt="">
                     <div class="card_description">
                         <div class="card_headline">
                             <h3>“Родной двор”</h3>
@@ -81,7 +81,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="/pics/card2.png" alt="">
+                    <img src="pics/card2.png" alt="">
                     <div class="card_description">
                         <div class="card_headline">
                             <h3>“Любимый район”</h3>
@@ -97,7 +97,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="/pics/card3.png" alt="">
+                    <img src="pics/card3.png" alt="">
                     <div class="card_description">
                         <div class="card_headline">
                             <h3>“Городская среда”</h3>
@@ -133,13 +133,13 @@
             </div>
                 <div class="cards">
                     <div class="card">
-                        <img src="/pics/blog1.png" alt="">
+                        <img src="pics/blog1.png" alt="">
                         <div class="card_description">
                             <h5>Самые культовые города из комиксов</h5>
                         </div>
                     </div>
                     <div class="card">
-                        <img src="/pics/blog2.png" alt="">
+                        <img src="pics/blog2.png" alt="">
                         <div class="card_description">
                             <h5>Реальные места и их версии в играх</h5>
                         </div>
@@ -147,13 +147,13 @@
                 </div>
                 <div class="cards">
                     <div class="card">
-                        <img src="/pics/blog3.png" alt="">
+                        <img src="pics/blog3.png" alt="">
                         <div class="card_description">
                             <h5>Почему мертвые места притягивают нас?</h5>
                         </div>
                     </div>
-                    <div class="card">
-                        <img src="/pics/blog4.png" alt="">
+                    <div class="card ">
+                        <img src="pics/blog4.png" alt="">
                         <div class="card_description">
                             <h5>Как увлечь игрока в “Симуляторе курьера”?<br>Эксклюзивное интервью с Хидео Кодзимой</h5>
                         </div>
@@ -174,7 +174,7 @@
             <div class="container">
                 <div class="footer">
                     <div class="footer_left">
-                        <img src="/pics/footerlogo.svg" alt="logo" class="footer_logo">
+                        <img src="pics/footerlogo.svg" alt="logo" class="footer_logo">
                         <div class="copyrights">
                             © 2025 World.craft online school <br>
                             ИП Зубенко Михаил Петрович<br>
