--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <a href="">Контакты</a>
                 </nav>
             </header>
-            <div class="container cover-content ">
+            <div class="container cover-content">
                 <h1>Создавай игровые города,<br>в которые хочется погружаться</h1>
                 <p>От заброшенных кварталов до футуристических<br>мегаполисов — научись проектировать
                     атмосферные<br>города
@@ -61,7 +61,8 @@
         <section id="catalog" class="container">
             <div class="block-description">
                 <h2 class="subtitle">Тарифы</h2>
-                <p class="main_text">Мы предоставляем наш курс в трех различных форматах, в зависимости от ваших запросов </p>
+                <p class="main_text">Мы предоставляем наш курс в трех различных форматах, в зависимости от ваших
+                    запросов </p>
             </div>
             <div class="cards">
                 <div class="card">
@@ -116,11 +117,13 @@
             </div>
         </section>
         <section id="form">
-            <h2>Хочешь создавать запомниющиеся города?<br>
+            <h2>Хочешь создавать запоминающиеся города?<br>
                 Запишись на курс!<br>
                 Сделай первый шаг в геймдизайне!</h2>
-            <form action="">
+            <form action="" id="forma" >
+                <label for="name">Ваше имя</label>
                 <input type="text" placeholder="Иванов Иван" name="" id="">
+                <label for="name">Электронная почта</label>
                 <input type="mail" placeholder="Example@mail.ru" name="" id="">
                 <input type="submit" value="Записаться!">
             </form>
@@ -128,44 +131,46 @@
         <section class="container" id="blog">
             <div class="block-description">
                 <h2 class="subtitle">Блог</h2>
-                <p class="main_text">Следите за трендами в игровой урбанистике! Узнайте, как создаются<br>культовые игровые города, и
-                    вдохновляйтесь свежими идеями.</p>
+                <p class="main_text">Следите за трендами в игровой урбанистике! Узнайте, как создаются<br>культовые
+                    игровые города, и вдохновляйтесь свежими идеями.</p>
             </div>
-                <div class="cards">
-                    <div class="card">
-                        <img src="pics/blog1.png" alt="">
-                        <div class="card_description">
-                            <h5>Самые культовые города из комиксов</h5>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <img src="pics/blog2.png" alt="">
-                        <div class="card_description">
-                            <h5>Реальные места и их версии в играх</h5>
-                        </div>
+            <div class="cards">
+                <div class="card news">
+                    <img src="pics/blog1.png" alt="">
+                    <div class="card_description">
+                        <h5>Самые культовые города из комиксов</h5>
                     </div>
                 </div>
-                <div class="cards">
-                    <div class="card">
-                        <img src="pics/blog3.png" alt="">
-                        <div class="card_description">
-                            <h5>Почему мертвые места притягивают нас?</h5>
-                        </div>
-                    </div>
-                    <div class="card ">
-                        <img src="pics/blog4.png" alt="">
-                        <div class="card_description">
-                            <h5>Как увлечь игрока в “Симуляторе курьера”?<br>Эксклюзивное интервью с Хидео Кодзимой</h5>
-                        </div>
+                <div class="card news">
+                    <img src="pics/blog2.png" alt="">
+                    <div class="card_description">
+                        <h5>Реальные места и их версии в играх</h5>
                     </div>
                 </div>
+            </div>
+            <div class="cards">
+                <div class="card news">
+                    <img src="pics/blog3.png" alt="">
+                    <div class="card_description">
+                        <h5>Почему мертвые места притягивают нас?</h5>
+                    </div>
+                </div>
+                <div class="card news">
+                    <img src="pics/blog4.png" alt="">
+                    <div class="card_description">
+                        <h5>Как увлечь игрока в “Симуляторе курьера”?<br>Эксклюзивное интервью с Хидео Кодзимой</h5>
+                    </div>
+                </div>
+            </div>
         </section>
         <section id="form2">
             <h2>Освой навыки создания городов для видеоигр<br>
                 и воплоти свои идеи в реальность!<br>
                 Оставь заявку прямо сейчас!</h2>
-            <form action="" id="forma">
+            <form action="">
+                <label for="name">Ваше имя</label>
                 <input type="text" placeholder="Иванов Иван" name="" id="">
+                <label for="name">Электронная почта</label>
                 <input type="mail" placeholder="Example@mail.ru" name="" id="">
                 <input type="submit" value="Записаться!">
             </form>
