все еще оптимизирую

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <h2>Хочешь создавать запоминающиеся города?<br>
                 Запишись на курс!<br>
                 Сделай первый шаг в геймдизайне!</h2>
-            <form action="" id="forma" >
+            <form action="">
                 <label for="name">Ваше имя</label>
                 <input type="text" placeholder="Иванов Иван" name="" id="">
                 <label for="name">Электронная почта</label>
