улучшила кнопочки в карточках

--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
                             <p class="price">4 900р</p>
                         </div>
                         <div class="main_text">
-                            <p>Основы урбанистики в играх:</p>
-                            <p>архитектура, атмосфера, влияние</p>
-                            <p>на геймплей. Практика — </p>
-                            <p>создание небольшой сцены.</p>
+                            <p>Основы урбанистики в играх:<br>
+                                архитектура, атмосфера, влияние<br>
+                                на геймплей. Практика — <br>
+                                создание небольшой сцены.</p>
                         </div>
-                        <button>Мне подходит!</button>
+                        <button class="btn-info">Мне подходит!</button>
                     </div>
                 </div>
                 <div class="card">
@@ -89,12 +89,12 @@
                             <p class="price">9 900р</p>
                         </div>
                         <div class="main_text">
-                            <p>Глубокий разбор игровых городов</p>
-                            <p>(GTA, Cyberpunk 2077, </p>
-                            <p>Dishonored). Создание районов, </p>
-                            <p>работа с вертикальностью.</p>
+                            <p>Глубокий разбор игровых городов<br>
+                                (GTA, Cyberpunk 2077,<br>
+                                Dishonored). Создание районов,<br>
+                                работа с вертикальностью.</p>
                         </div>
-                        <button>Мне подходит!</button>
+                        <button class="btn-info">Мне подходит!</button>
                     </div>
                 </div>
                 <div class="card">
@@ -105,13 +105,12 @@
                             <p class="price">16 900р</p>
                         </div>
                         <div class="main_text">
-                            <p>Полный курс с обратной связью. </p>
-                            <p>Проработка стилистики (нуар, </p>
-                            <p>стимпанк и др.), реализация </p>
-                            <p>финального проекта игрового </p>
-                            <p>города.</p>
+                            <p>Полный курс с обратной связью.<br>
+                                Проработка стилистики (нуар, стимпанк<br>
+                                и др.), реализация финального проекта<br>
+                                игрового города.</p>
                         </div>
-                        <button>Мне подходит!</button>
+                        <button class="btn-info">Мне подходит!</button>
                     </div>
                 </div>
             </div>
@@ -120,7 +119,7 @@
             <h2>Хочешь создавать запоминающиеся города?<br>
                 Запишись на курс!<br>
                 Сделай первый шаг в геймдизайне!</h2>
-            <form action="" id="forma" >
+            <form action="" id="forma">
                 <label for="name">Ваше имя</label>
                 <input type="text" placeholder="Иванов Иван" name="" id="">
                 <label for="name">Электронная почта</label>
